--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todos</title>
-</head>
-<body>
-  <h1>Todos</h1>
-  <%= yield %>
-</body>
-</html>
+<%= link_to "Add a new todo", new_todo_path %>
